<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="app_title">Playlist maker</string>
    <string name="btn_library">Медиатека</string>
    <string name="btn_settings">Настройки</string>
    <string name="btn_search">Поиск</string>
    <string name="btn_dark_theme">Темная тема</string>
    <string name="btn_share_app">Поделиться приложением</string>
    <string name="btn_support">Написать в поддержку</string>
    <string name="btn_user_agreement">Пользовательское соглашение</string>
    <string name="title_settings">Настройки</string>
    <string name="share_app_text">https://practicum.yandex.com/profile/android-developer-plus/</string>
    <string name="share_chooser_title">Поделиться через</string>
    <string name="support_email_address">diborempty@gmail.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">«Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_link">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="title_search">Поиск</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="something_went_wrong_additional_message">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="btn_refresh">Обновить</string>
    <string name="timerTVText">00:00</string>
</resources>