<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settingsToolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:title="@string/title_settings"
        app:titleTextAppearance="@style/ToolbarTitleTextStyle"
        app:titleMarginStart="12dp"
        app:navigationIcon="@drawable/ic_back_arrow_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_btn_dark_mode"
        style="@style/SettingsSwitchButtonStyle"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/btn_dark_theme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsToolbar" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_share"
        style="@style/SettingsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_share_24"
        android:paddingVertical="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/btn_share_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_btn_dark_mode" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_support"
        style="@style/SettingsButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_support_24"
        android:paddingVertical="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        android:text="@string/btn_support"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_user_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="21dp"
        android:paddingStart="16dp"
        android:paddingEnd="12dp"
        style="@style/SettingsButtonStyle"
        android:drawableEnd="@drawable/ic_next_arrow_24"
        android:text="@string/btn_user_agreement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_support" />


</androidx.constraintlayout.widget.ConstraintLayout>