<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_title"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/MainButtonWithIconStyle"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_search"
        app:icon="@drawable/ic_search_24"
        app:layout_constraintBottom_toTopOf="@id/btn_library"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_library"
        style="@style/MainButtonWithIconStyle"
        android:layout_marginTop="16dp"
        android:text="@string/btn_library"
        app:icon="@drawable/ic_library_24"
        app:layout_constraintBottom_toTopOf="@id/btn_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_search" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/MainButtonWithIconStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/btn_settings"
        app:icon="@drawable/ic_settings_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_library" />

</androidx.constraintlayout.widget.ConstraintLayout>